<resources>
    <string name="app_name">Eslab_final_impromptu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect">Tap to connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="record">Record</string>
    <string name="settings">Settings</string>
    <string name="sheet">Music Sheet</string>
    <string name="nowPlaying">Now Playing:</string>
    <string name="pitchSwitching">Pitch Switching</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="birthday">Happy Birthday</string>
    <string name="christmas">We Wish You A Merry Christmas</string>
    <string name="jinglebell">Jingle Bell</string>
    <string name="star">Twinkle Twinkle Little Star</string>
    <string name="notPlaying">Not Playing</string>
</resources>