<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">
        <TextView
            android:id="@+id/nowPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nowPlaying"
            android:textSize="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView android:id="@+id/np1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/nowPlaying"
                app:layout_constraintBottom_toTopOf="@id/record"
            app:layout_constraintEnd_toStartOf="@id/np2"
            app:layout_constraintStart_toStartOf="parent"
                android:text="C3"
            android:textSize="32dp"/>
        <TextView android:id="@+id/np2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/nowPlaying"
            app:layout_constraintBottom_toTopOf="@id/record"
            app:layout_constraintStart_toEndOf="@id/np1"
            app:layout_constraintEnd_toStartOf="@id/np3"
            android:textSize="32dp"
            android:text="D3" />
        <TextView android:id="@+id/np3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/nowPlaying"
            app:layout_constraintBottom_toTopOf="@id/record"
            app:layout_constraintStart_toEndOf="@id/np2"
            app:layout_constraintEnd_toStartOf="@id/np4"
            android:textSize="32dp"
            android:text="E3" />
        <TextView android:id="@+id/np4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/nowPlaying"
            app:layout_constraintBottom_toTopOf="@id/record"
            app:layout_constraintStart_toEndOf="@id/np3"
            app:layout_constraintEnd_toStartOf="@id/np5"
            android:textSize="32dp"
            android:text="F3" />
        <TextView android:id="@+id/np5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/nowPlaying"
            app:layout_constraintBottom_toTopOf="@id/record"
            app:layout_constraintStart_toEndOf="@id/np4"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="32dp"
            android:text="G3" />
        <Button
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"
            app:layout_constraintTop_toTopOf="@id/nowPlaying"
            app:layout_constraintBottom_toTopOf="@+id/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="@id/disconnect"
            app:layout_constraintTop_toBottomOf="@+id/record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- TODO: Update blank fragment layout -->

</FrameLayout>